Add album cover img  to AlbumCard component

--- a/Frontend/src/components/albumcard/AlbumCard.css
+++ b/Frontend/src/components/albumcard/AlbumCard.css
@@ -59,6 +59,11 @@
   font-size: 17pt;
 }
 
+.albumcard .cover {
+    width: 50%;
+    margin: 10px;
+}
+
 
 .albumcard .info-btn {
   font-weight: bold;
