--- a/Frontend/src/components/albumcard/AlbumCard.css
+++ b/Frontend/src/components/albumcard/AlbumCard.css
@@ -45,15 +45,8 @@
   padding: 15px 10px;
 }
 
-.albumcard .title {
-  font-size: 47pt;
-  font-weight: bold;
-  
-  margin-bottom: 20px;
-  text-shadow: 0 0 8px rgb(122, 72, 6);
-}
 
-.albumcard .desc {
+.albumcard .title {
   font-weight: bold;
   text-shadow: 0 0 4px rgb(80, 33, 1);
   font-size: 17pt;
@@ -62,6 +55,8 @@
 .albumcard .cover {
     width: 50%;
     margin: 10px;
+    border-radius: 10px;
+    border: 4px solid rgb(255, 135, 135);
 }
 
 
@@ -80,24 +75,3 @@
   border-radius: 10px 0 10px 0;
 }
 
-.albumcard .imgheader {
-  width: 80%;
-  position: absolute;
-  top: -100px;
-  left: 30px;
-  opacity: 0.3;
-}
-
-.albumcard .vipimg {
-  width: 80%;
-  position: absolute;
-  top: -90px;
-  left: 0px;
-}
-
-.albumcard .crateimg {
-  width: 80%;
-  position: absolute;
-  top: -100px;
-  left: 50px;
-}
